<resources>
    <string name="app_name">In Promos App</string>

    <!-- On boarding activity -->
    <string name="on_boarding_skip_btn">SALTAR</string>
    <string name="on_boarding_end_btn">FINALIZAR</string>
    <string name="on_boarding_body_one"><b>¡Bienvenido a IN-PROMOS App!</b>\nA través de ésta aplicación puedes cotizar nuestros\nproductos y personalizarlos si lo deseas.</string>
    <string name="on_boarding_body_two">Realiza las cotizaciones de los productos\nque tenemos disponibles desde tu Smartphone\nde una manera fácil e intuitiva.</string>
    <string name="on_boarding_body_three">Haz tus propios diseños, personaliza productos a tu gusto sin necesidad de moverte de dónde estás, todo con una serie de simples pasos. </string>

    <!-- Orders fragment-->
    <string name="orders_toolbar_title">Pedidos</string>

    <!-- Selector bottom sheet -->
    <string name="sheet_company">EMPRESARIAL</string>
    <string name="sheet_custom">PERSONALIZADO</string>

    <!-- Add new order activity-->
    <string name="new_order_toolbar_title">Nuevo pedido</string>
    <string name="new_order_toolbar_body">Agrega todos los productos que desees en tu pedido para poder realizar una cotización.</string>
    <string name="new_order_quote">COTIZAR</string>

    <!-- Catalogue activity -->
    <string name="catalogue_toolbar_title">Catálogo</string>
    <string name="catalogue_body">Elige una categoría para ver los productos disponibles a añadir en su pedido.</string>

    <!-- Products fragment -->
    <string name="products_toolbar_title">Producto</string>
    <string name="product_customize_button">PERSONALIZAR</string>

    <!-- Customization fragment -->
    <string name="custom_toolbar_title">Nombre de producto</string>
    <string name="customization_select_color">Seleccione el color</string>
    <string name="customization_next_button">SIGUIENTE</string>
    <string name="customization_load_image">Carga tu diseño</string>
    <string name="customization_load_button">CARGAR</string>
    <string name="customization_select_position">Selecciona la posición</string>
    <string name="customization_return_button">ANTERIOR</string>
    <string name="customization_select_size">Seleccione el tamaño</string>
    <string name="customization_count_select">Seleccione la cantidad</string>
    <string name="customization_finish_button">FINALIZAR</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet consectetur adipiscing elit pharetra taciti, nascetur leo posuere ultricies rutrum orci natoque suspendisse per, quisque laoreet tortor ridiculus semper conubia mattis non.</string>

    <array name="positions">
        <item>Centro/Frente</item>
        <item>Pecho/Izquierda</item>
        <item>Pecho/Derecha</item>
        <item>Espalda</item>
        <item>Espalda/Arriba</item>
        <item>Hombro/Izquierda</item>
        <item>Hombro/Derecha</item>
    </array>

</resources>
