<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="@dimen/_12sdp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/customization_load_image"
        style="@style/ToolbarText"
        android:fontFamily="@font/roboto_medium"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loadImageBtn"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/customization_load_button"
        android:textColor="@color/colorAccentThird"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:layout_marginTop="@dimen/_12sdp"/>

    <EditText
        android:id="@+id/imagePathTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:enabled="false"
        android:textSize="@dimen/_10sdp"
        android:fontFamily="@font/roboto_light"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/loadImageBtn"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:layout_marginStart="@dimen/_12sdp"
        android:maxLines="1"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/customization_select_position"
        style="@style/ToolbarText"
        android:fontFamily="@font/roboto_medium"
        app:layout_constraintTop_toBottomOf="@id/loadImageBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_12sdp"/>

    <Spinner
        android:id="@+id/positionSelectorSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_12sdp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/nextSelectSizeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/customization_next_button"
        android:textColor="@color/colorAccentPrimary"
        style="@style/Widget.MaterialComponents.Button.TextButton"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/returnColorSelectorBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/customization_return_button"
        android:textColor="@color/colorAccentPrimaryTransluscend"
        style="@style/Widget.MaterialComponents.Button.TextButton"/>

</androidx.constraintlayout.widget.ConstraintLayout>