<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="@dimen/_12sdp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/customization_select_size"
        style="@style/ToolbarText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:fontFamily="@font/roboto_medium"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/sizeRecyclerView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_12sdp"
        android:orientation="horizontal"
        tools:listitem="@layout/item_size"
        tools:itemCount="1"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/customization_count_select"
        style="@style/ToolbarText"
        app:layout_constraintTop_toBottomOf="@id/sizeRecyclerView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_12sdp"
        android:fontFamily="@font/roboto_medium"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/_12sdp">

        <ImageView
            android:id="@+id/productCountLessBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_less"
            android:background="?selectableItemBackground"/>

        <EditText
            android:id="@+id/productCountTxt"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="match_parent"
            android:background="@drawable/shape_square"
            android:backgroundTint="@android:color/white"
            android:enabled="false"
            android:text="1"
            android:textAlignment="center"/>

        <ImageView
            android:id="@+id/productCountPlusBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_plus"
            android:background="?selectableItemBackground"/>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/finishCustomizationBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/customization_finish_button"
        android:textColor="@color/colorAccentPrimary"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/returnImageSelectorBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/customization_return_button"
        android:textColor="@color/colorAccentPrimaryTransluscend"
        style="@style/Widget.MaterialComponents.Button.TextButton"/>

</androidx.constraintlayout.widget.ConstraintLayout>