<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".activities.NewOrderActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/newOrderAbl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        app:liftOnScroll="true"
        app:liftOnScrollTargetViewId="@id/newOrderRecyclerView">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/newOrderToolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:title="@string/new_order_toolbar_title"
            app:titleTextAppearance="@style/ToolbarText"
            app:navigationIcon="@drawable/ic_arrow_back"/>

        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_order_toolbar_body"
            style="@style/BodyText"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginBottom="@dimen/_12sdp"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/newOrderRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:paddingBottom="@dimen/_12sdp"
        android:clipToPadding="false"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addProductFab"
        android:layout_width="wrap_content"
        android:layout_height="84dp"
        android:layout_margin="@dimen/_12sdp"
        app:backgroundTint="@color/colorAccentThird"
        app:layout_anchor="@id/newOrderAbl"
        app:layout_anchorGravity="bottom|end"
        app:srcCompat="@drawable/ic_add"
        app:tint="@android:color/white" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_order_quote"
        android:backgroundTint="@color/colorAccentThird"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="@dimen/_12sdp"
        style="@style/Widget.MaterialComponents.Button.TextButton"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>